# obi

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  justfile  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml  spec-drift.yml
docs/: agent-quickstart.md  api.md  auth.md  index.md  schema.md  user-quickstart.md
docs/stylesheets/: extra.css
src/obitrain/: __init__.py  __main__.py  api.py  auth.py  client.py  config.py  creds.py  errors.py  models.py  openapi.json  options.py  output.py  quickstart.md  run.py  runner.py  schema.py
src/obitrain/api/: __init__.py  cmd.py  models.py  openapi.json  schema.py
static/: openapi.json
tests/: conftest.py  test_api.py  test_auth.py  test_client.py  test_config.py  test_creds.py  test_output.py  test_run.py  test_schema.py
